--- a/Rintro.qmd
+++ b/Rintro.qmd
@@ -11,7 +11,7 @@ author: Dr. Nicola Righetti, PhD
 
 -   Know how to generate a new RStudio project and access a previously created RStudio project.
 
--   Know how to create fresh folders within an RStudio project.
+-   Know how to create new folders within an RStudio project.
 
 -   Know how to create, save, and open a script.
 
@@ -27,9 +27,9 @@ The RStudio interface is divided into four panes or quadrants. The specific layo
 
 ![](img/r-environment.png)
 
-The RStudio interface is divided into four quadrants. The top-left pane displays the scripts, which are text files containing a set of commands (code) used to perform analyses. Scripts are saved with the ".r" extension. The top-right quadrant includes the Environment window, where data sets and other objects created or loaded in a RStudio work session are stored. In R, objects refer to everything a user can manipulate, such as data sets, functions, and algorithms. This quadrant also contains tabs for Files, History, Connections, Packages, and more. The Files tab allows users to navigate files and folders to find scripts and data sets to upload.
+The top-left pane displays the scripts, which are text files containing a set of commands (code) used to perform analyses. Scripts are saved with the ".r" extension. The top-right quadrant includes the Environment window, where data sets and other objects created or loaded in a RStudio work session are stored. In R, objects refer to everything a user can manipulate, such as data sets, functions, and algorithms. This quadrant also contains tabs for Files, History, Connections, Packages, and more. The Files tab allows users to navigate files and folders to find scripts and data sets to upload.
 
-The bottom-right quadrant is where graphical outputs, such as plots and statistical charts, are displayed. Statistical graphs or charts are visual representations of statistical data. This quadrant also contains a tab for R packages, which are collections of functions for performing specific operations and analyses. The Help section is also located here, providing information on functions and how to use them. Users can search for specific functions or type "?functionname" in the console to access the Help section.
+The bottom-right quadrant is where graphical outputs, such as plots and statistical charts, are displayed. Statistical graphs or charts are visual representations of statistical data. This quadrant also contains a tab for R packages, which are collections of functions for performing specific operations and analyses. The Help section is also located here, providing information on functions and how to use them. Users can search for specific functions or type `?function_name` in the console to access the Help section.
 
 The bottom-left quadrant displays the R Console window, where code is executed and output is produced. Users can type and run commands directly in the console, but the code will not be saved unless it is written in a script.
 
@@ -42,11 +42,11 @@ To create a new project with RStudio, follows these steps:
 -   Click on File (on the top left);
 -   Click on New Project;
 -   Select New Directory, and New Project;
--   Choose a folder for the project and give it a name. For our course, use ADA_MMCP (Advanced Data Analysis, Mediation Moderation Conditional Process Analysis).
+-   Choose a folder for the project and give it a name. For our course, use `ADA_MMCP` (Advanced Data Analysis, Mediation Moderation Conditional Process Analysis).
 
 ![](img/r-studio-project-creation.png)
 
-You have now created a project along with its own folder. The name of the folder is identical to that of the project. Inside the folder, there is a file with extension .Rproj and the same name of the project (e.g., "ADA_MMCP.Rproj"). This is the file you have to open whenever you want to work on the project.
+You have now created a project along with its own folder. The name of the folder is identical to that of the project. Inside the folder, there is a file with extension `.Rproj` and the same name of the project (e.g., `ADA_MMCP.Rproj`). This is the file you have to open whenever you want to work on the project.
 
 Creating sub-folders within the main project folder can help organize the different types of files used in the project. For example, you may want to have a separate folder for data sets, another one for scripts, and another for outputs such as tables and graphs.
 
@@ -66,23 +66,23 @@ Your new sub-folder will appear in the Files tab.
 
 Now, create a folder for the data sets, called data. You will save here the data sets we are going to use during the course.
 
-Once the project has been created, we can open a new **script** and save it. We said that a script is a file that contains code. Script files are automatically saved with extension .r. You can open, update, and save your script whenever you like. Saving code is important to save time! Otherwise, you would have to write the same code whenever you work on the project. Create a script named introduction_to_r. You will use it to write and run the code we are going to use today.
+Once the project has been created, we can open a new **script** and save it. We said that a script is a file that contains code. Script files are automatically saved with extension .r. You can open, update, and save your script whenever you like. Saving code is important to save time! Otherwise, you would have to write the same code whenever you work on the project. Create a script named `introduction_to_r`. You will use it to write and run the code we are going to use in this learning unit.
 
 To execute (or "run") the code in the script, we can highlight the line of code we want to run, and then click the Run button. This button can be found on the top-right corner of the editor window. Alternatively, you can place the cursor on the row containing the code to be executed, and then click Run. Instead of the Run button, the code can be executed by using the Ctrl + Enter key combination (also Command + Enter on a Mac).
 
-In your script "introduction_to_r", write a simple addition and execute it.
+In your script `introduction_to_r` write a simple addition and execute it.
 
 ```{r}
 5 + 3
 ```
 
-Now, save the script by clicking on the disk symbol you see in the top left corner of the editor. Close the script by clicking on the small "x" (upper right corner of the editor). Finally, in the "Files" window (upper left-hand quadrant), find the "introduction_to_r" script and reopen it in RStudio.
+Now, save the script by clicking on the disk symbol you see in the top left corner of the editor. Close the script by clicking on the small "x" (upper right corner of the editor). Finally, in the "Files" window (upper left-hand quadrant), find the `introduction_to_r` script and reopen it in RStudio.
 
 ## Install and load packages
 
 Packages (also libraries) are kinds of "toolboxes" containing sets of functions used to perform different types of operations.
 
-R already includes several default functions and packages, but several additional packages are available. It is possible to install a package by using the menu (Tools/Install Packages...) or by using the function install.packages("name-of-the-package-here").
+R already includes several default functions and packages, but several additional packages are available. It is possible to install a package by using the menu (Tools/Install Packages...) or by using the function `install.packages("name-of-the-package-here")`.
 
 A very useful package is tidyverse. Tidyverse actually includes several other packages, such as `ggplot2` to create charts, and dplyr to manipulate data sets ("data wrangling").
 
@@ -145,9 +145,9 @@ Download the data set "glbwarm.csv", save it into your folder "data", and load i
 glbwarm <- read.csv(file = "data/glbwarm.csv")
 ```
 
-This function creates a object called glbwarm. You can see this object in the Environment window (top-right quadrant). We said that an object is something that can be manipulated in R. In this case, the object is a data set. You can manipulate it, for example, to perform analyses, create new data, etc.
+This function creates a object called `glbwarm`. You can see this object in the Environment window (top-right quadrant). We said that an object is something that can be manipulated in R. In this case, the object is a data set. You can manipulate it, for example, to perform analyses, create new data, etc.
 
-Also note that, in R, we use an arrow **\<-** to save the data set in an object. The arrow "transfers" the result of a function (its output) into an object. If you run a function without saving the output in an object through the arrow sign, the output is printed on the console.
+Also note that, in R, we use an arrow **`<-`** to save the data set in an object. The arrow "transfers" the result of a function (its output) into an object. If you run a function without saving the output in an object through the arrow sign, the output is printed on the console.
 
 ```{r eval=FALSE}
 read.csv(file = "data/glbwarm.csv")
@@ -189,7 +189,7 @@ In this case, we can see that the first three variables are numerical (num), and
 
 There are also other types of data, such as character (char) for character values, logical for logical values (TRUE and FALSE), and factors to describe items that can have a finite number of values (gender: male, female, other; education, etc.).
 
-Sometimes, variables represets dates and times. Just to make an example of data set inclusing several type of data, we create a data set named data_set_example by running the following code.
+Sometimes, variables represents dates and times. Just to make an example of data set inclusing several type of data, we create a data set named `data_set_example` by running the following code.
 
 ```{r echo=FALSE}
 data_set_example <-
@@ -213,7 +213,7 @@ data_set_example <-
 glimpse(data_set_example)
 ```
 
-Data analysis operations basically consist of manipulations of objects through functions. An object is an entity composed of a name and a value (such as a number) or more complex information (such as a data set). The arrow \<- sign is used to create objects, or to assign/update a value, if the object already exists.
+Data analysis operations basically consist of manipulations of objects through functions. An object is an entity composed of a name and a value (such as a number) or more complex information (such as a data set). The arrow `<-` sign is used to create objects, or to assign/update a value, if the object already exists.
 
 Let's make an example. Let's create an object with name object_2 and value equal to 2.
 
@@ -227,7 +227,7 @@ Now, let's write the name of the object in the script and run the command (put t
 object_2
 ```
 
-Object names can be freely chosen. However, avoid using names that are already used for other objects and functions. For example, avoid giving the name "read.csv" to a data set, as this would overwrite the "read.csv" function. Similarly, if you use "object_2" to save the output of another function, or to represent another value, you will delete the previous value (2):
+Object names can be freely chosen. However, avoid using names that are already used for other objects and functions. For example, avoid giving the name `read.csv` to a data set, as this would overwrite the `read.csv` function. Similarly, if you use `object_2` to save the output of another function, or to represent another value, you will delete the previous value (2):
 
 ```{r}
 object_2 <- 44
@@ -283,7 +283,7 @@ a_matrix <- matrix(data = 1:50, nrow = 10, ncol = 5)
 a_matrix
 ```
 
-As matrixes are mathematical objects, they can contain only numbers.
+As matrices are mathematical objects, they can contain only numbers.
 
 A data.frame is a very important object for data analysis and in this course we will work almost exclusively with data.frames.
 
@@ -295,7 +295,7 @@ head(glbwarm)
 head(data_set_example)
 ```
 
-Data frames are important because they represent data sets in R. For instance, if you import a csv or an Excel file in R, the corresponding R object is a data.frame. You can see the type of data by using the function
+Data frames are important because they represent data sets in R. For instance, if you import a csv or an Excel file in R, the corresponding R object is a `data.frame`. You can see the type of data by using the function `class`.
 
 ```{r}
 class(glbwarm)
@@ -305,7 +305,7 @@ class(a_matrix)
 
 ```
 
-The columns of a data set/data frame represent variables, and rows represent cases. For example, the global warming data set (glbwarm) comprises 815 rows/cases and 7 columns/variables. This data set results from measuring 815 persons on 7 dimensions (e.g., support for government, ideology, age, etc.).
+The columns of a data set/data frame represent variables, and rows represent cases. For example, the global warming data set (`glbwarm`) comprises 815 rows/cases and 7 columns/variables. This data set results from measuring 815 persons on 7 dimensions (e.g., support for government, ideology, age, etc.).
 
 ```{r}
 head(glbwarm)
@@ -323,7 +323,7 @@ The functions `str` or `glimpse` permits to see the names of the columns/variabl
 names(glbwarm)
 ```
 
-We can access the columns of a data.frame by using the following sintax: name of the data frame, dollar sign, name of the column. For isntance, to access the column "age" of the data.frame "glbwarm":
+We can access the columns of a `data.frame` by using the following syntax: name of the data frame, dollar sign `$`, name of the column. For instance, to access the column "age" of `glbwarm`:
 
 ```{r eval=FALSE}
 glbwarm$age
@@ -333,7 +333,7 @@ glbwarm$age
 head(glbwarm$age, 10)
 ```
 
-You may have noticed that this is just a vector. Indeed, data.frames are object composed by a series of vectors.
+You may have noticed that this is just a vector. Indeed, `data.frames` are object composed by a series of vectors.
 
 Lists are another common type of object. Lists can be used to contain different types of objects. For example, a list may include a matrix, a number, and a data.frame. We will not work with this type of object in this course.
 
@@ -342,8 +342,6 @@ list(a_matrix, object_2, data_set_example)
 ```
 
 An object can also represent a function. We said that functions can be conceived as "mechanisms" that generate output from an input. Functions can transform other objects based on specific rules. For instance, addition is a function that receives two or more numbers as input and generates an output that corresponds to the sum of these numbers.
-
-\`
 
 ```{r}
 sum(1, 4)
@@ -374,11 +372,11 @@ Several resources about R are freely available online. YouTube features several 
 
 ### Exercise
 
--   Open the RStudio project you created today
+-   Open the RStudio project you created in this learning unit
 
--   Open the script you created today
+-   Open the script you created in this learning unit
 
--   Write and run a few mathematical operations in the script file (e.g., 3+2, 5/3, etc.)
+-   Write and run a few mathematical operations in the script file (e.g., `3+2`, `5/3`, etc.)
 
 -   Create a new object containing the output of the function `sum` (e.g., `my_sum <- sum(4, 8)`) and use this object to perform another mathematical operation of your choice
 
@@ -392,4 +390,4 @@ Several resources about R are freely available online. YouTube features several 
 
 -   Take a look at the data set using the functions `View`, `str`, and `glimpse` (remember to load the package `tidyverse` before using the glimpse function)
 
--   Access one of the column of the data set (name_of_dataframe + dollar sign `$` + name of the column) using the dollar sign
+-   Access one of the column of the data set (`name_of_dataframe` + dollar sign `$` + name of the column) using the dollar sign.
